--- a/docker/.env.example
+++ b/docker/.env.example
@@ -102,3 +102,11 @@ DOCKER_SOCKET_LOCATION=/var/run/docker.sock
 # Google Cloud Project details
 GOOGLE_PROJECT_ID=GOOGLE_PROJECT_ID
 GOOGLE_PROJECT_NUMBER=GOOGLE_PROJECT_NUMBER
+
+
+############
+# Storage - Configuration for Storage
+############
+
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
