--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -179,6 +179,7 @@ services:
       PGRST_DB_USE_LEGACY_GUCS: "false"
       PGRST_APP_SETTINGS_JWT_SECRET: ${JWT_SECRET}
       PGRST_APP_SETTINGS_JWT_EXP: ${JWT_EXPIRY}
+      PGRST_LOG_LEVEL: "warn"
     command: "postgrest"
 
   realtime:
