Revert "remove minio from here, host separately"
This reverts commit f5c43196f430090666cd1d9c9879332aaaffdc7c.

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -7,23 +7,29 @@
 name: supabase
 version: "3.8"
 
+networks:
+  supa-network:
+    external: true
+
 services:
-  nginx:
-    image: "jc21/nginx-proxy-manager:latest"
-    restart: unless-stopped
-    ports:
-      # These ports are in format <host-port>:<container-port>
-      - "80:80" # Public HTTP Port
-      - "443:443" # Public HTTPS Port
-      - "81:81" # Admin Web Port
-    volumes:
-      - ./nginx-data:/data
-      - ./nginx-letsencrypt:/etc/letsencrypt
-      - ./nginx-snippets:/snippets:ro
-    environment:
-      TZ: "Asia/Kolkata" # Specify a timezone to use Etc/UTC by default
+  # nginx:
+  #   image: "jc21/nginx-proxy-manager:latest"
+  #   restart: unless-stopped
+  #   ports:
+  #     # These ports are in format <host-port>:<container-port>
+  #     - "80:80" # Public HTTP Port
+  #     - "443:443" # Public HTTPS Port
+  #     - "81:81" # Admin Web Port
+  #   volumes:
+  #     - ./nginx-data:/data
+  #     - ./nginx-letsencrypt:/etc/letsencrypt
+  #     - ./nginx-snippets:/snippets:ro
+  #   environment:
+  #     TZ: "Asia/Kolkata" # Specify a timezone to use Etc/UTC by default
 
   studio:
+    networks:
+      - supa-network
     container_name: supabase-studio
     image: supabase/studio:20231023-7e2cd92
     restart: unless-stopped
@@ -62,6 +68,8 @@ services:
       NEXT_ANALYTICS_BACKEND_PROVIDER: bigquery
 
   kong:
+    networks:
+      - supa-network
     container_name: supabase-kong
     image: kong:2.8.1
     restart: unless-stopped
@@ -91,6 +99,8 @@ services:
       - ./volumes/api/kong.yml:/home/kong/temp.yml:ro
 
   auth:
+    networks:
+      - supa-network
     container_name: supabase-auth
     image: supabase/gotrue:v2.99.0
     depends_on:
@@ -150,6 +160,8 @@ services:
       GOTRUE_SMS_AUTOCONFIRM: ${ENABLE_PHONE_AUTOCONFIRM}
 
   rest:
+    networks:
+      - supa-network
     container_name: supabase-rest
     image: postgrest/postgrest:v11.2.0
     depends_on:
@@ -170,6 +182,8 @@ services:
     command: "postgrest"
 
   realtime:
+    networks:
+      - supa-network
     container_name: realtime-dev.supabase-realtime
     image: supabase/realtime:v2.10.1
     depends_on:
@@ -210,6 +224,8 @@ services:
       sh -c "/app/bin/migrate && /app/bin/realtime eval 'Realtime.Release.seeds(Realtime.Repo)' && /app/bin/server"
 
   storage:
+    networks:
+      - supa-network
     container_name: supabase-storage
     image: supabase/storage-api:v0.40.4
     depends_on:
@@ -266,6 +282,8 @@ services:
       - ./volumes/storage:/var/lib/storage:z
 
   imgproxy:
+    networks:
+      - supa-network
     container_name: supabase-imgproxy
     image: darthsim/imgproxy:v3.8.0
     healthcheck:
@@ -282,6 +300,8 @@ services:
       - ./volumes/storage:/var/lib/storage:z
 
   meta:
+    networks:
+      - supa-network
     container_name: supabase-meta
     image: supabase/postgres-meta:v0.68.0
     depends_on:
@@ -300,6 +320,8 @@ services:
       PG_META_DB_PASSWORD: ${POSTGRES_PASSWORD}
 
   functions:
+    networks:
+      - supa-network
     container_name: supabase-edge-functions
     image: supabase/edge-runtime:v1.22.3
     restart: unless-stopped
@@ -322,6 +344,8 @@ services:
       - /home/deno/functions/main
 
   analytics:
+    networks:
+      - supa-network
     container_name: supabase-analytics
     image: supabase/logflare:1.4.0
     healthcheck:
@@ -373,6 +397,8 @@ services:
 
   # Comment out everything below this point if you are using an external Postgres database
   db:
+    networks:
+      - supa-network
     container_name: supabase-db
     image: supabase/postgres:15.1.0.117
     healthcheck:
@@ -413,6 +439,8 @@ services:
       - ./volumes/db/logs.sql:/docker-entrypoint-initdb.d/migrations/99-logs.sql:Z
 
   vector:
+    networks:
+      - supa-network
     container_name: supabase-vector
     image: timberio/vector:0.28.1-alpine
     healthcheck:
