--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -240,26 +240,25 @@ services:
       PGRST_JWT_SECRET: ${JWT_SECRET}
       DATABASE_URL: postgres://supabase_storage_admin:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
       FILE_SIZE_LIMIT: 52428800
-      # STORAGE_BACKEND: file
+      STORAGE_BACKEND: file
       FILE_STORAGE_BACKEND_PATH: /var/lib/storage
       TENANT_ID: stub
       # TODO: https://github.com/supabase/storage-api/issues/55
-      # REGION: stub
-      # GLOBAL_S3_BUCKET: stub
+      REGION: stub
+      GLOBAL_S3_BUCKET: stub
       ENABLE_IMAGE_TRANSFORMATION: "true"
       IMGPROXY_URL: http://imgproxy:5001
-      # ...other definitions
-      STORAGE_BACKEND: s3
-      GLOBAL_S3_BUCKET: supabase
-      GLOBAL_S3_ENDPOINT: https://minio1.supa.abhnv.xyz
-      GLOBAL_S3_PROTOCOL: https 
-      REGION: asia-south2 #whatever your region is
-      AWS_DEFAULT_REGION: asia-south2
-
-      #this next one seems important for minio
-      GLOBAL_S3_FORCE_PATH_STYLE: true
-      AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
-      AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
+      # # ...other definitions
+      # STORAGE_BACKEND: s3
+      # GLOBAL_S3_BUCKET: supabase
+      # GLOBAL_S3_ENDPOINT: https://minio1.supa.abhnv.xyz
+      # GLOBAL_S3_PROTOCOL: https 
+      # REGION: asia-south2 #whatever your region is
+      # AWS_DEFAULT_REGION: asia-south2
+      # #this next one seems important for minio
+      # GLOBAL_S3_FORCE_PATH_STYLE: true
+      # AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
+      # AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
     volumes:
       - ./volumes/storage:/var/lib/storage:z
 
